# Base-Convert

./: .gitignore  CMakeLists.txt  README.md  main.c
inc/: conv.h
src/: conv.c  main.c
